--- a/sampl.ipynb
+++ b/sampl.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPvPyWj0im2snUFWJ/Kuuxn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -47,6 +46,29 @@
       ],
       "source": [
         "print('Ultra Instinct')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('Ultra Ego')"
+      ],
+      "metadata": {
+        "id": "O9phY9PZXvN-",
+        "outputId": "f604cca8-2cd2-4c39-d9c1-ba4a6df6f2bd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ultra Ego\n"
+          ]
+        }
       ]
     }
   ]
